# bevy_blender_template

./: .gitignore  Cargo.toml  LICENSE  README.markdown
assets/blueprints/: island.glb  rotunda.glb  scene.blend  scene.glb  water.glb
src/: assets.rs  controls.rs  lighting.rs  main.rs  player.rs  types.rs
