[package]
name = "bevy_blender_template"
version = "0.1.0"
edition = "2021"

[dependencies]

# Comment the longer bevy import line and uncomment the shorter one before releasing!
# See https://bevyengine.org/learn/quick-start/getting-started/setup/ for more info
# TODO make this automatic based on whether we're in debug or release mode?
# bevy = "0.13.2"
bevy = { version = "0.13.0", features = ["dynamic_linking"] }
bevy_asset_loader = "0.20"
bevy_gltf_blueprints = { version = "0.10" }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
